# FFMAS

./: .env.example  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: secret-scan.yml
src/: __init__.py  config.py  financials.py  llm_client.py  web_app.py
static/: app.js
templates/: index.html
tests/: test_financials.py  test_llm_client.py  test_project_standards.py  test_webapp.py
